# ORBIT

./: .gitignore  CMakeLists.txt  LICENSE  README.md  requirements.txt  setup.sh
algorithms/aes_128_gcm/: aead.c  api.h
algorithms/gift_cofb/: encrypt.c
algorithms/ml_kem_512/: randombytes.c  randombytes.h
bench/: main.c  util.c  util.h
cmake/: board_pico.cmake  board_rpi5.cmake  board_stm32.cmake  toolchain_arm_none_eabi.cmake
include/: crypto_aead.h
results/: pico_ascon_aead128.csv  rpi5_ascon_aead128.csv  stm32_ascon_aead128.csv  test.csv  test2.csv  test3.csv  test4.csv  test5.csv
results/archived/: README.md  pc_ascon_aead128_validation.csv  pico_aes_128_gcm.csv  pico_ascon_aead128.csv  pico_ascon_aead80pq.csv  pico_gift_cofb.csv  pico_ml_kem_512.csv
scripts/: attach_pico.ps1
tools/: eclipse.py  manager.py  orbit.py  plot_results.py
